src/App.css
#root {
  /* max-width: 1280px; */
  width: 100vw;
  margin: 0 auto;
  text-align: center;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

body {
  margin: 0;
}

.App {
  max-width: 550px;
  padding: 1rem 0;
}

.city {
  border: 1px solid white;
  padding: 1rem;
  text-align: left;
}

.city h3 {
  margin: 0;
  margin-bottom: 1rem;
  text-align: center;
}

.city input {
  margin-left: 0.5rem;
}

.city-results p {
  margin-bottom: 0;
}

.game-results {
  font-size: 1.25rem;
}

.history {
  border-top: 3px solid rgb(204, 204, 204);
  margin-top: 1rem;
}

table {
  font-family: Arial, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

th,
td {
  border: 1px solid #dddddd;
  text-align: left;
  padding: 8px;
}

th {
  background-color: #f2f2f2;
}

.guess-counter {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

.modal-overlay {
}

.modal-content {
  flex-direction: column;
}

header {
  width: 100%;
  border-bottom: 1px solid rgb(188, 188, 188);
  padding: 0.25rem 0;

  display: flex;
  align-items: center;

  position: relative;
}

header h1 {
  margin: 0;
  flex: 1;
  font-family: Oswald, Arial, Helvetica, sans-serif;
}

/* the SettingsButton */
header button {
  margin-right: 2rem;
  position: absolute;
  right: 0;
}

.settings {
  display: flex;
  flex-direction: column;
  padding: 0 1rem;
}

.settings-header {
  position: relative;
  display: flex;
  justify-content: center;
}

.settings-header h4 {
  margin-top: 0.25rem;
  margin-bottom: 0.5rem;
}

.settings-header button {
  position: absolute;
  top: 0;
  right: 0;
  margin-top: 0.5rem;
}

.settings section {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 1rem;
}

